småændringer i tekst i nippon

--- a/nippon.html
+++ b/nippon.html
@@ -73,15 +73,7 @@
     <!-- PROCES DELEN -->
     <section class="proces">
         <section class="v-side2">
-            <p>Indledningsvist udarbejdede vi en tidsplan samt gruppekontrakt for at sikre optimalt samarbejde og
-                tilrettelægge vores gøremål. </p>
-            <p><strong>Proces</strong> <br>Til udførelsen af Nippon var hovedfokuset at sikre en intuitiv
-                brugeroplevelse, hvor designet stemte overens med både funktionalitet og æstetik. Beslutningerne blev
-                truffet på baggrund af vores UX research og valgene blev brugertestet, vurderet og optimeret løbende
-                gennem iterationer. Derudover stod jeg for udarbejdede af designmanual, hvor jeg b.l.a. skulle definere
-                respektafstande samt minimumstørrelser for logoet og fastlægge retningslinjer for typografi, farver,
-                fotostil, ikoner og animationer. Manualen formidler, hvordan Nippons branding skal anvendes fremadrettet
-                både af interne og eksterne samarbejdspartnere og sikrer et konsekvent udtryk på tværs af platforme.
+            <p><strong>Designmanual</strong> <br>I forbindelse med Nippon-projektet var jeg ansvarlig for udarbejdelsen af designmanualen. Jeg definerede retningslinjer for logoets respektafstande og minimumstørrelser, samt fastlagde standarder for typografi, farver, fotostil, ikoner og animationer. Manualen sikrer et konsekvent brandudtryk på tværs af platforme og bruges af både interne og eksterne samarbejdspartnere.
             </p>
 
         </section>
@@ -101,12 +93,7 @@
     <section class="vIdentitet">
         <section class="v-side3">
             <p><strong>Visuel identitet</strong><br>
-                Nippons visuelle identitet er designet med fokus på at skabe et moderne og stilrent udtryk, der
-                afspejler brandets japanske inspiration og sofistikerede tilgang. Identiteten kombinerer minimalistiske
-                elementer med en farvepalette, der spænder fra subtile, naturlige nuancer til mere markante, livlige
-                farver, der fremkalder både ro og energi. ved at gøre logoet skalerbart logo, muliggør det, at det kan
-                fungere med og uden tekst og dermed kann benyttes forskelligt, til forskellige touchpoints.
-                Denne identitet blev eksperimenteret med gennem plakater for at afprøve visuelle udtryk.</p>
+                Nippons visuelle identitet er designet med fokus på et moderne og stilrent udtryk, der afspejler brandets japanske inspiration. Her var fokus på at skabe en fleksibel og tidløs identitet, der kan tilpasses forskellige platforme og kommunikationskanaler. Logoet blev valgt skalerbart med henblik på at kunne benyttes både med og uden tekst, hvilket giver fleksibilitet til forskellige touchpoints. Identiteten blev afprøvet gennem eksperimenter med plakater for at teste visuelle udtryk.</p>
 
 
         </section>
