sidste fordi i dag god nat

--- a/zeroBuzz.html
+++ b/zeroBuzz.html
@@ -51,7 +51,7 @@
                 <strong>Case</strong> <br>
                 Fik til opgave, at udarbejde en digital løsning for det fiktive mikrobryggeri ZeroBuzz Brew, som
                 udelukkende tilbyder alkoholfri øl. Dertil skulle vi udarbejde en visuel- og brand identitet, med
-                henblik i at appellere til målgruppen 18-35 år samt bryde stigmatisering om alkoholfri øl.
+                henblik i at appellere til målgruppen 18-35 år.
             </p>
 
             <p><strong>Værktøjer </strong></p>
