--- a/nippon.html
+++ b/nippon.html
@@ -35,7 +35,6 @@
         </div>
     </nav>
 
-
     <!-- INTRODUKTION DELEN -->
 
     <section class="introduktion">
@@ -43,16 +42,14 @@
             <p id="projektNr">PROJEKT NO. 1</p>
             <h1>Nippon</h1>
             <img id="nipponPC" src="images/nipponPC.webp" alt="Macbook mockup med hjemmeside for Nippon måltidskasser">
-            <p>Vores løsning bestod af en brugeroptimeret hjemmeside til desktop. </p>
+            <p><strong>Løsning:</strong> brugeroptimeret interaktiv hjemmeside til desktop. </p>
         </section>
 
         <section class="h-side1">
             <p>
                 <strong>Case</strong> <br>
-                Vi fik til opgave, at udarbejde en digital løsning til Nippon, et brand inspireret af japansk kultur,
-                der tilbyder japanske måltidskasser. Fokus var at skabe en brugervenlig og intuitiv hjemmeside, der både
-                imødekommer brugerens behov og positionerer brandet stærkt på markedet, så det tiltrækker potentielle
-                kunder og motiverer til køb.
+                Vi fik til opgave, at udarbejde en digital løsning til Nippon - et brand inspireret af japansk kultur,
+                der tilbyder japanske måltidskasser. Fokus var at skabe en brugervenlig og intuitiv hjemmeside, der tilgodeser brugerens behov. 
             </p>
 
             <p><strong>Værktøjer </strong></p>
@@ -74,7 +71,6 @@
     <section class="proces">
         <section class="v-side2">
             <p><strong>Designmanual</strong> <br>I forbindelse med Nippon-projektet var jeg ansvarlig for udarbejdelsen af designmanualen. Jeg definerede retningslinjer for logoets respektafstande og minimumstørrelser, samt fastlagde standarder for typografi, farver, fotostil, ikoner og animationer. Manualen sikrer et konsekvent brandudtryk på tværs af platforme og bruges af både interne og eksterne samarbejdspartnere.
-            </p>
 
         </section>
 
@@ -104,11 +100,11 @@
 
     </section>
 
-   
 
- <!-- KOMPTENCER -->
 
- <section class="indhold">
+    <!-- KOMPTENCER -->
+
+<section class="indhold">
     <section>
             <h2>Metoder</h2>
             <section id="Kompetencer">-
@@ -171,13 +167,10 @@
 
 </section>
 
+    
+     <!-- FOOTER-->
 
-
-
-
-    <!-- FOOTER-->
-
-    <footer>
+     <footer>
 
         <aside class="Fkolonne">
             <p id="tlfnr">
