--- a/zeroBuzz.html
+++ b/zeroBuzz.html
@@ -43,7 +43,8 @@
             <h1>ZeroBuzz Brew</h1>
             <img id="zeroPC" src="images/zeroPC.webp" alt="Macbook mockup med hjemmeside for ZeroBuzz Brew">
             <img id="zeroTlf" src="images/zeroTLF.webp" alt="iPhone mockup med hjemmeside for ZeroBuzz Brew">
-            <p id="billedeTekst1">Min løsning bestod af en responsiv hjemmeside, som er optimeret til telefon og desktop. </p>
+            <p id="billedeTekst1">
+                <strong>Løsning:</strong> En responsiv hjemmeside, som er optimeret til telefon og desktop. </p>
         </section>
 
         <section class="h-side1">
@@ -85,17 +86,9 @@
     <!-- PROCES DELEN -->
     <section class="proces">
         <section class="v-side2">
-            <p>Forinden designprocessen udførte jeg en deskresearch og interviews for at definere målgruppens drivkraft.
-            </p>
-            <p><strong>Proces</strong> <br>Efter researchen var det første skridt at skitsere. Skitserne udviklede sig
-                hurtigt gennem den agile proces, hvorefter jeg valgte farver, typografi og visuelle elementer baseret på
-                designprincipper og research. Beslutningerne samler jeg i styletiles for at fastlå retningslinjerne for
-                resten af designet.
+            <p><strong>Logodesign</strong> <br>Logoet kombinerer en legende typografi med en karakterfuld illustration, der skaber genkendelighed og understøtter brandets budskab. Processen indebar skitsering, iterativ designudvikling og digitalisering, hvor jeg balancerede et unikt, ungdommeligt og moderne udtryk.
 
-                For at lave brugeroptimeret løsning udførte kortsortering af informationsarkitekturen for at sikre en
-                intuitiv oplevelse. Derefter udarbejdede jeg low fidility wireframes, hvortil jeg gennemfører
-                brugertests. Der udførte jeg usability testing og A/B splittest for at validere designbeslutninger og
-                optimere brugeroplevelsen inden jeg færddiggjorde mit mockup og påbegyndte programmeringsprocessen. </p>
+                Designet anvendes på emballage, markedsføring og den digitale platform, hvilket sikrer en rød tråd i brandets identitet.</p>
         </section>
 
         <section class="h-side2">
@@ -114,8 +107,7 @@
     <!-- VISUEL IDENTITET DELEN -->
     <section class="vIdentitet">
         <section class="v-side3">
-            <p id="billedeTekst">Reklamer til de forskellige smagsvarianter, min løsning tilbyder- den friske, den,
-                klassiske og den sunde.</p>
+            <p id="billedeTekst">Designet anvendt på emballage, reklamer og markedsføringsmateriale for at skabe et sammenhængende udtryk.</p>
             <div id="varianter">
                 <img id="zeroPlakat" src="images/zeroPlakat.webp"
                     alt="Plakat med ZeroBuzz Brew, som hænger ude på gaden. En mand går forbi">
@@ -125,10 +117,7 @@
 
         <section class="h-side3">
             <p><strong>Visuel identitet</strong><br>
-                I udarbejdelsen af den visuelle identitet har jeg fokuseret på kontrasten mellem den mørkeblå typografi
-                og det lysegule canvas. Denne kombination er valgt for at sikre høj genkendelighed, samtidig med at den
-                understøtter god læselighed. Valget er ideelt til både reklamer, som den viste plakat, og
-                emballagedesign, hvor det visuelle udtryk skaber et stærkt og sammenhængende brand.</p>
+                For at skabe en stærk og genkendelig visuel identitet har jeg arbejdet med kontrasten mellem mørkeblå typografi og en lysegul baggrund, hvilket sikrer høj læsbarhed og et unikt brandudtryk. Der er udviklet tre varianter af øllen – den friske, den klassiske og den sunde – hvor hver variant har sin egen farvekode og visuelle elementer, der afspejler smagsnuancerne. </p>
             <aside id="varianter">
             <img src="images/denFriske.webp" style="max-width: 20%; height: auto;">
             <img src="images/denKlassiske.webp" style="max-width: 20%; height: auto;">
