--- a/zeroBuzz.html
+++ b/zeroBuzz.html
@@ -118,9 +118,9 @@
             <p><strong>Visuel identitet</strong><br>
                 For at skabe en stærk og genkendelig visuel identitet har jeg arbejdet med kontrasten mellem mørkeblå typografi og en lysegul baggrund, hvilket sikrer høj læsbarhed og et unikt brandudtryk. Der er udviklet tre varianter af øllen – den friske, den klassiske og den sunde – hvor hver variant har sin egen farvekode og visuelle elementer, der afspejler smagsnuancerne. </p>
             <aside id="varianter">
-            <img src="images/denFriske.webp" style="max-width: 20%; height: auto;">
-            <img src="images/denKlassiske.webp" style="max-width: 20%; height: auto;">
-            <img src="images/denSunde.webp" style="max-width: 20%; height: auto;">
+                <img src="images/denFriske.webp" style="max-width: 20%; height: auto; margin: 30px 20px;">
+                <img src="images/denKlassiske.webp" style="max-width: 20%; height: auto; margin: 30px 20px;">
+                <img src="images/denSunde.webp" style="max-width: 20%; height: auto; margin: 30px 20px;">
             </aside>
         </section>
 
